Adding PyCitySchools.ipynb file and Resources folder.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -339,6 +339,17 @@
    "id": "c573cc07",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Determine if there are any missing values in the school data.\n",
+    "school_data_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f235799-1781-46f2-9874-cd2e1ec3b81e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
